# proyecto_fuga

./: .env  README.md  main.py  pyproject.toml
database/: ges_fugas.sql
