[project]
name = "proyecto-fuga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.85.0",
    "flet-geolocator>=0.85.0",
    "flet-permission-handler>=0.85.0",
    "flet-webview>=0.85.0",
    "mysql-connector-python>=9.7.0",
    "python-dotenv>=1.2.2",
]
